[project]
name = "douyin-crawler"
version = "0.1.0"
description = "A standalone Douyin (TikTok China) crawler, extracted from MediaCrawler project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles~=23.2.1",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "pillow>=10.4.0",
    "playwright>=1.49.0",
    "pydantic>=2.10.0",
    "pyexecjs>=1.5.1",
    "tenacity>=8.2.2",
    "wordcloud>=1.9.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
